--- a/style.css
+++ b/style.css
@@ -3,3 +3,32 @@ body {
   height: 100%;
   margin: 0;
 }
+header {
+  text-align: center;
+}
+img {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+}
+nav a {
+  padding-right: 10px;
+  padding-left: 10px;
+  background-color: grey;
+}
+figcaption {
+  font-size: smaller;
+  text-align: center;
+}
+#featured-property p {
+  width: 800px;
+  margin: auto;
+  text-align: center;
+  padding-top: 5px;
+}
+section div {
+  float: left;
+  background-color: red;
+  width: 25%;
+  text-align: center;
+}
